--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -1,8 +1,5 @@
 \chapter{Background: Model Checking}
-
-
-There are many systems in the modern world that are built from communicating concurrent subsystems 
-
+%%%There are many systems in the modern world that are built from communicating concurrent subsystems 
 Model checking is a formal method that is typically used to reason about the correctness of finite systems with a discrete state space. Due to the nature of modern computers, such systems occur often in the area of computer science such as electronics or processes on a computer. It attempts to perform an exhaustive search of the state space to check that each state has a particular property. In this thesis is concerned with two types of model checking. One encodes the object being modelled as some form of state transition system before checking properties over that system specified in some temporal logic. This is called temporal logic model checking and was invented in the 1980s by two seperate research teams  Clarke and Emerson \cite{EM82} and Quielle and Sifakis \cite{JQ82}. The other encodes the system and the model checking problem over it as a SAT problem which is then decided using a SAT solver \cite{MS00}. The very nature of this formal method in that it is essentially an exhaustive search is also its downfall. A small increase in the complexity of the computer system can lead to a large increase in the state space. This exponential increase in the complexity of model checking a particular system is called the state \emph{space explosion problem}. Most improvements to the standard model checking algorithms are designed to reduce the impact of this problem. These optimisations typically exploit the structure of the system or properties such as symmetry to cut down the state space. Examples of modern model checkers include SPIN \cite{GH04} which performs on-the-fly model checking  based around the partial order reduction technique \cite{DP94}  and the probablistic model checker Prism \cite{MK11}. The Maude LTL Model Checker \cite{} also performs on-the-fly model checking and the underlying principles behind this will be discusses later in this chapter.
 
 \section{Model Checkng Preliminaries}
